--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body {
 .mt-5
 {
   color:black;
-  margin-bottom: 10%;
+  margin-bottom: 5%;
   
 
 
@@ -17,7 +17,6 @@ body {
   }
 #render_area_div
 {
-  background-color: blue;
   max-width: 70%;
   margin-top: 10%;
   margin-left: 15%;
@@ -58,5 +57,17 @@ body {
 {
   color: black;
   font-size: 80%;
+  
+}
+
+#message_div
+{
+  color: black;
+  font-size: 120%;
+  margin-top:2%;
+  margin-bottom:3%;
+  margin-left:23%;
+  font-weight: bold;
+
   
 }
